--- a/bs-config.json
+++ b/bs-config.json
@@ -1,5 +1,5 @@
 {
     "port": 8000,
-    "files": ["./src/**/*.{html,htm,css,js}"],
+    "files": ["./**/*.{html,htm,css,js}"],
     "server": { "baseDir": "./" }
   }
